Adjusts image position

--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -13,8 +13,7 @@ header {
   background-image: url("../images/black_woman_at_computer.jpeg");
   background-repeat: no-repeat;
   background-size: 750px;
-  background-position: -60px 0px;
-  padding-top: 15%;
+  background-position: -90 0;
 
   p h1 { @include span-columns(12); }
   h1 {color: white;}
@@ -22,7 +21,7 @@ header {
   .hero-blurb {
     @include outer-container;
     text-align: center;
-    padding: 100px 20% 75px;
+    padding: 150px 20% 50px;
     p {font-weight: 400;}
   }
 }
